# Round_RGB

./: partitions_example.csv  sdkconfig  sdkconfig.old
components/lvgl__lvgl/: lvgl.h
components/lvgl__lvgl/src/: lvgl.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  round_pallette.c  ui_img_round_pallette_png.c
